--- a/index.html
+++ b/index.html
@@ -21,11 +21,18 @@
     </div>
 
     <div id="hourly">
-        <!-- Hourly data will be inserted here -->
-    </div>
+        <div id="hourlyContent">
+            <!-- Hourly data will be inserted here -->
+        </div>
+     </div>
+
+     <div id="daily">
+        <div id="dailyContent">
+            <!-- Hourly data will be inserted here -->
+        </div>
+     </div>
 
     <script src="app.js"></script>
 
 </body>
-
 </html>
